[project]
name = "mev-pipe"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Evan K", email = "ekcopersonal@gmail.com" }]
dependencies = [
    "hypersync>=0.6.2",
    "lancedb-tables>=0.1.2",
    "polars>=0.20.28",
    "ipykernel>=6.29.4",
    "hvplot>=0.10.0",
    "python-dotenv>=1.0.1",
    "prefect>=2.19.2",
    "ipywidgets>=8.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mev_pipe"]
